src/snapshots/tptp__tests__tfx_xprod_type.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
XprodType(
    [
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
        Atomic(
            Constant(
                TypeConstant(
                    TypeFunctor(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
