src/snapshots/tptp__tests__tptp_input-3.snap
---
source: src/tests.rs
expression: parsed

---
Annotated(
    Fof(
        FofAnnotated(
            Annotated {
                name: AtomicWord(
                    Lower(
                        LowerWord(
                            "test",
                        ),
                    ),
                ),
                role: FormulaRole(
                    LowerWord(
                        "axiom",
                    ),
                ),
                formula: Formula(
                    Unitary(
                        Atomic(
                            Defined(
                                Plain(
                                    DefinedPlainFormula(
                                        Constant(
                                            DefinedConstant(
                                                DefinedFunctor(
                                                    AtomicDefinedWord(
                                                        DollarWord(
                                                            LowerWord(
                                                                "true",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                annotations: Annotations(
                    None,
                ),
            },
        ),
    ),
)
