src/snapshots/tptp__tests__tptp_input-5.snap
---
source: src/tests.rs
expression: parsed
---
Annotated(
    Cnf(
        CnfAnnotated(
            Annotated {
                name: AtomicWord(
                    Lower(
                        LowerWord(
                            "test",
                        ),
                    ),
                ),
                role: FormulaRole(
                    LowerWord(
                        "axiom",
                    ),
                ),
                formula: Disjunction(
                    Disjunction(
                        [
                            Atomic(
                                Defined(
                                    Plain(
                                        DefinedPlainFormula(
                                            DefinedPlainTerm(
                                                DefinedConstant(
                                                    DefinedFunctor(
                                                        AtomicDefinedWord(
                                                            DollarWord(
                                                                LowerWord(
                                                                    "true",
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                annotations: Annotations(
                    None,
                ),
            },
        ),
    ),
)
