src/snapshots/tptp__tests__tptp_input.snap
---
source: src/tests.rs
expression: parsed

---
Include(
    Include {
        file_name: FileName(
            SingleQuoted(
                "test",
            ),
        ),
        selection: FormulaSelection(
            None,
        ),
    },
)
