src/snapshots/tptp__tests__type_constant.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
TypeConstant(
    TypeFunctor(
        Lower(
            LowerWord(
                "type_constant",
            ),
        ),
    ),
)
