src/snapshots/tptp__tests__type_functor.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
TypeFunctor(
    Lower(
        LowerWord(
            "type_functor",
        ),
    ),
)
