src/snapshots/tptp__tests__untyped_atom-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
System(
    SystemConstant(
        SystemFunctor(
            AtomicSystemWord(
                DollarDollarWord(
                    LowerWord(
                        "system_constant",
                    ),
                ),
            ),
        ),
    ),
)
