src/snapshots/tptp__tests__untyped_atom.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "constant",
                ),
            ),
        ),
    ),
)
